# JPET-Model-scintillator-plate

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  model.longscin.crosscheck.cpp  model.params.cc  model.phm.edges.cpp  model.phm.edges_plus_flat.cpp  model.phm.flat.cpp  model1.cpp  model2.cpp  model3.cpp  model_check_artefact.cpp  model_longscin_crosscheck.cpp  model_params.cc  model_params.h  model_phm_edges.cpp  plastic_scin.cpp  plastic_scin.h  platemodel.cpp  silicon.cpp  silicon.h
model_objects/: plastic_scin.cpp  plastic_scin.h  silicon.cpp  silicon.h
