cmake_minimum_required(VERSION 2.6)
project(PlateStecintillator)
option(debug "Compile in debug mode" OFF)
if(debug)
  set(CMAKE_BUILD_TYPE Debug)
endif()
set(CMAKE_CXX_FLAGS "-pthread -std=gnu++11 -fPIC")
set(gnuplot_wrap ON CACHE BOOL "Plotting library is needed")
add_subdirectory(RectangularScintillator)
include_directories(RectangularScintillator/include)
include_directories(model_objects)
add_library(modelfiles SHARED model_objects/plastic_scin.cpp model_objects/silicon.cpp)
add_executable(Model.longscin model.longscin.crosscheck.cpp)
target_link_libraries(Model.longscin rectscin modelfiles gpwrap)
add_executable(Model.edges model.phm.edges.cpp)
target_link_libraries(Model.edges rectscin modelfiles)